; ModuleID = '/home/carl/AnghaBench/linux/lib/math/extr_prime_numbers.c_free_primes.c'
source_filename = "/home/carl/AnghaBench/linux/lib/math/extr_prime_numbers.c_free_primes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.primes = type { i32 }

@lock = common dso_local global i32 0, align 4
@primes = common dso_local global i32 0, align 4
@small_primes = common dso_local global %struct.primes zeroinitializer, align 4
@rcu = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @free_primes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_primes() #0 {
  %1 = alloca %struct.primes*, align 8
  %2 = call i32 @mutex_lock(i32* @lock)
  %3 = load i32, i32* @primes, align 4
  %4 = call i32 @lockdep_is_held(i32* @lock)
  %5 = call %struct.primes* @rcu_dereference_protected(i32 %3, i32 %4)
  store %struct.primes* %5, %struct.primes** %1, align 8
  %6 = load %struct.primes*, %struct.primes** %1, align 8
  %7 = icmp ne %struct.primes* %6, @small_primes
  br i1 %7, label %8, label %14

8:                                                ; preds = %0
  %9 = load i32, i32* @primes, align 4
  %10 = call i32 @rcu_assign_pointer(i32 %9, %struct.primes* @small_primes)
  %11 = load %struct.primes*, %struct.primes** %1, align 8
  %12 = load i32, i32* @rcu, align 4
  %13 = call i32 @kfree_rcu(%struct.primes* %11, i32 %12)
  br label %14

14:                                               ; preds = %8, %0
  %15 = call i32 @mutex_unlock(i32* @lock)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local %struct.primes* @rcu_dereference_protected(i32, i32) #1

declare dso_local i32 @lockdep_is_held(i32*) #1

declare dso_local i32 @rcu_assign_pointer(i32, %struct.primes*) #1

declare dso_local i32 @kfree_rcu(%struct.primes*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
